[package]
name = "eurus"
version = "0.1.0"
authors = ["gala377", "domnyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "sqlite", "mysql"] }
dotenv = "0.9.0"
juniper = "0.11"
rocket = "0.4.2"
r2d2 = "0.8.6"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool"]
