[package]
name = "eurus"
version = "0.1.0"
authors = ["gala377", "domnyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "sqlite", "mysql"] }
dotenv = "0.14.1"
juniper = "0.14.0"
rocket = "0.4.2"
r2d2 = "0.8.6"
rand = "0.7.2"
juniper_rocket = "0.5"
juniper-from-schema = "0.5.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool"]
